--- a/guideLine/html/sub/htmcss.html
+++ b/guideLine/html/sub/htmcss.html
@@ -49,7 +49,7 @@
             </article>
             <h4>div 한화면에 꽉차게 작업</h4>
             <table class="default-table">
-                <caption>기본적인 html에 대한 설명</caption>
+                <caption class="sr-only">기본적인 html에 대한 설명</caption>
                 <colgroup>
                     <col style="width: 25%" />
                     <col style="width: 75%" />
@@ -259,42 +259,235 @@
             <h4>테이블 표기법</h4>
             <article class="explanation-box">
                 <table class="default-table">
-                <caption class="sr-only">TABLE 표기법 설명</caption>
+                    <caption class="sr-only">TABLE 표기법 설명</caption>
+                    <colgroup>
+                        <col style="width: 25%" />
+                        <col style="width: 75%" />
+                    </colgroup>
+                    <tbody>
+                        <tr>
+                            <th  scope="row">테이블 기본구조</th>
+                            <td>
+                                <p>가로 테이블</p>
+                                <pre>
+                                    &lt;table&gt;
+                                        &lt;caption class="sr-only"&gt;가로 테이블&lt;/caption&gt;
+                                        &lt;colgroup&gt;
+                                            &lt;col style="width: 25%" /&gt;
+                                            &lt;col style="width: 75%" /&gt;
+                                        &lt;/colgroup&gt;
+                                        &lt;thead&gt;
+                                            &lt;tr&gt;
+                                                &lt;th scope="col"&gt;제목&lt;/th&gt;
+                                                &lt;th>설명&lt;/th&gt;
+                                            &lt;/tr&gt;
+                                        &lt;/thead&gt;
+                                        &lt;tbody&gt;
+                                            &lt;tr&gt;
+                                                &lt;td scope="row"&gt;내용1&lt;/td&gt;
+                                                &lt;td>내용2&lt;/td&gt;
+                                            &lt;/tr&gt;
+                                            &lt;tr&gt;
+                                                &lt;td&gt;내용3&lt;/td&gt;
+                                                &lt;td&gt;내용4&lt;/td&gt;
+                                            &lt;/tr&gt;
+                                        &lt;/tbody&gt;
+                                    &lt;/table&gt;
+                                </pre>
+                                <pre>
+                                    <table>
+                                        <caption class="sr-only">세로 테이블</caption>
+                                        <colgroup>
+                                            <col style="width: 25%" />
+                                            <col style="width: 75%" />
+                                        </colgroup>
+                                        <thead>
+                                            <tr>
+                                                <th scope="col">제목</th>
+                                                <th>설명</th>
+                                            </tr>
+                                        </thead>
+                                        <tbody>
+                                            <tr>
+                                                <td scope="row">내용1</td>
+                                                <td>내용2</td>
+                                            </tr>
+                                            <tr>
+                                                <td>내용3</td>
+                                                <td>내용4</td>
+                                            </tr>
+                                        </tbody>
+                                    </table>
+                                </pre>
+                                <p>세로 테이블</p>
+                                <pre>
+                                    &lt;table&gt;
+                                        &lt;caption class="sr-only"&gt;세로 테이블&lt;/caption&gt;
+                                        &lt;colgroup&gt;
+                                            &lt;col style="width: 25%" /&gt;
+                                            &lt;col style="width: 75%" /&gt;
+                                        &lt;/colgroup&gt;
+                                        &lt;tbody&gt;
+                                            &lt;tr&gt;
+                                                &lt;th  scope="row"&gt;제목&lt;/th&gt;
+                                                &lt;td&gt;내용1&lt;/td&gt;
+                                            &lt;/tr&gt;
+                                            &lt;tr&gt;
+                                                &lt;th&gt;설명&lt;/th&gt;
+                                                &lt;td&gt;내용2&lt;/td&gt;
+                                            &lt;/tr&gt;
+                                        &lt;/tbody&gt;
+                                    &lt;/table&gt;
+                                </pre>
+                                <pre>
+                                    <table>
+                                        <caption class="sr-only">세로 테이블</caption>
+                                        <colgroup>
+                                            <col style="width: 25%" />
+                                            <col style="width: 75%" />
+                                        </colgroup>
+                                        <tbody>
+                                            <tr>
+                                                <th  scope="row">제목</th>
+                                                <td>내용1</td>
+                                            </tr>
+                                            <tr>
+                                                <th>설명</th>
+                                                <td>내용2</td>
+                                            </tr>
+                                        </tbody>
+                                    </table>
+                                </pre>
+                                <p>합계 테이블</p>
+                                <pre>
+                                    &lt;table&gt;
+                                        &lt;caption class="sr-only"&gt;합계 테이블&lt;/caption&gt;
+                                        &lt;colgroup&gt;
+                                            &lt;col style="width: 25%" /&gt;
+                                            &lt;col style="width: 75%" /&gt;
+                                        &lt;/colgroup&gt;
+                                        &lt;thead&gt;
+                                            &lt;tr&gt;
+                                                &lt;th scope="col"&gt;제목&lt;/th&gt;
+                                                &lt;th>설명&lt;/th&gt;
+                                            &lt;/tr&gt;
+                                        &lt;/thead&gt;
+                                        &lt;tbody&gt;
+                                            &lt;tr&gt;
+                                                &lt;td scope="row"&gt;내용1&lt;/td&gt;
+                                                &lt;td>내용2&lt;/td&gt;
+                                            &lt;/tr&gt;
+                                            &lt;tr&gt;
+                                                &lt;td&gt;내용3&lt;/td&gt;
+                                                &lt;td&gt;내용4&lt;/td&gt;
+                                            &lt;/tr&gt;
+                                        &lt;/tbody&gt;
+                                        &lt;tfoot&gt;
+                                            &lt;tr&gt;
+                                                &lt;td colspan=2&gt;합계&lt;/td&gt;
+                                            &lt;/tr&gt;
+                                        &lt;/tfoot&gt;
+                                    &lt;/table&gt;
+                                </pre>
+                                <pre>
+                                    <table>
+                                        <caption class="sr-only">합계 테이블</caption>
+                                        <colgroup>
+                                            <col style="width: 25%" />
+                                            <col style="width: 75%" />
+                                        </colgroup>
+                                        <thead>
+                                            <tr>
+                                                <th scope="col">제목</th>
+                                                <th>설명</th>
+                                            </tr>
+                                        </thead>
+                                        <tbody>
+                                            <tr>
+                                                <td scope="row">내용1</td>
+                                                <td>내용2</td>
+                                            </tr>
+                                            <tr>
+                                                <td>내용3</td>
+                                                <td>내용4</td>
+                                            </tr>
+                                        </tbody>
+                                        <tfoot>
+                                            <tr>
+                                                <td colspan=2>합계</td>
+                                            </tr>
+                                        </tfoot>
+                                    </table>
+                                </pre>
+                            </td>
+                        </tr>
+                        <tr>
+                            <th>&lt;caption&gt;</th>
+                            <td> 
+                                <ul>
+                                    <li>웹접근성 고려하여 테이블 내에 &lt;caption&gt; 반드시 기재 </li>
+                                    <li>기재는 하되 레이아웃 구성상 숨김처리 (클래스 "sr-only" 사용)</li>
+                                    <li>"sr-only" 클래스가 지정 안되었을시 다음 코드 생성</li> 
+                                </ul>
+                                <pre>
+                                    .sr-only{
+                                        position: absolute;
+                                        width: 1px;
+                                        height: 1px;
+                                        padding: 0;
+                                        margin: -1px;
+                                        overflow: hidden;
+                                        clip: rect(0, 0, 0, 0);
+                                        border: 0;
+                                    }
+                                </pre>
+                            </td>
+                        </tr>
+                        <tr>
+                            <th>IE 에서 border 값 오류 해결</th>
+                            <td>
+                                <pre>
+                                    <!-- th td 부분에 -->
+                                    @media all and (-ms-high-contrast: none), (-ms-high-contrast: active){
+                                        background-clip: padding-box;
+                                    }
+                                </pre>   
+                            </td>
+                    </tbody>
+                </table>
+            </article>
+        </section>
+        <section>
+            <h3>INPUT</h3>
+            <h4>input[type="file"] 속성</h4>
+            <table class="default-table">
+                <caption class="sr-only">input[type="file"] 속성</caption>
                 <colgroup>
                     <col style="width: 25%" />
                     <col style="width: 75%" />
                 </colgroup>
                 <tbody>
                     <tr>
-                        <th>테이블 기본구조</th>
+                        <th  scope="row">accept</th>
+                        <td>허용하는 파일 유형을 나타내는 하나 이상의 고유 파일 유형 지정자</td>
                     </tr>
                     <tr>
-                        <th scope="row">&lt;caption&gt;</th>
-                        <td> 
-                            <ul>
-                                <li>웹접근성 고려하여 테이블 내에 &lt;caption&gt; 반드시 기재 </li>
-                                <li>기재는 하되 레이아웃 구성상 숨김처리 (클래스 "sr-only" 사용)</li>
-                                <li>"sr-only" 클래스가 지정 안되었을시 다음 코드 생성</li> 
-                            </ul>
-                            <pre>
-                                .sr-only{
-                                    position: absolute;
-                                    width: 1px;
-                                    height: 1px;
-                                    padding: 0;
-                                    margin: -1px;
-                                    overflow: hidden;
-                                    clip: rect(0, 0, 0, 0);
-                                    border: 0;
-                                }
-                            </pre>
-                        </td>
+                        <th>capture</th>
+                        <td>이미지 또는 비디오 데이터를 캡처할 때 사용할 방법</td>
+                    </tr>
+                    <tr>
+                        <th>files</th>
+                        <td>선택한 파일을 나열</td>
+                    </tr>
+                    <tr>
+                        <th>multiple</th>
+                        <td>지정할 경우 사용자가 여러 개의 파일을 선택할 수 있음</td>
                     </tr>
                 </tbody>
             </table>
         </section>
         <section id="animation">
-        <h3>애니메이션</h3>
+            <h3>애니메이션</h3>
             <table class="default-table">
                 <caption class="sr-only">애니메이션 활용법</caption>
                 <colgroup>
