--- a/guideLine/html/sub/vue.html
+++ b/guideLine/html/sub/vue.html
@@ -773,17 +773,9 @@
             <section>
                 <h3>사용자 입력폼 만들기</h3>
                 <article class="explanation-box">
-                    <form>
-                        <div>
-                          <label for="username">id: </label>
-                          <input type="text" id="username">
-                        </div>
-                        <div>
-                          <label for="password">PW : </label>
-                          <input type="password" id="password">
-                        </div>
-                        <button type="submit">Login</button>  
-                    </form>   
+                    <figure>
+                        <img src="../../assets/images/sub/vue/img-vue-06.png" alt="vue 설명">
+                    </figure>
                 </article>
                 <h4>마크업 작업</h4>
                 <pre>
