--- a/guideLine/html/sub/vue.html
+++ b/guideLine/html/sub/vue.html
@@ -709,7 +709,7 @@
                             <th scope="row">scoped </th>
                             <td>
                                 <figure>
-                                    <img src="../../assets/images/img-vue-02.png" alt="scoped">
+                                    <img src="../../assets/images/sub/vue.img-vue-02.png" alt="scoped">
                                     <figcaption>해당 컴포넌트 안에서만 적용</figcaption>
                                 </figure>
                             </td>
