--- a/guideLine/html/sub/sass.html
+++ b/guideLine/html/sub/sass.html
@@ -37,177 +37,191 @@
             <h2>SASS</h2>
             <h3>SASS 초기 셋팅</h3>
             <p class="notice">해당 내용은 이클립스로 sass를 작업할때 필요한 셋팅입니다. </p>
-            <h4>css 편집기와 연결</h4>
-            <table class="default-table">
-                <caption class="sr-only">scss 파일 유형을 기본 Eclipse css 편집기와 연결</caption>
-                <colgroup>
-                    <col style="width: 25%" />
-                    <col style="width: 75%" />
-                </colgroup>
-                <tbody>
-                    <tr>
-                        <th scope="row">Eclipse CSS 편집기와 연결</th>
-                        <td>
-                            <ol type="1">
-                                <li>"<span class="bold">window &gt; preferences</span>"로 이동</li>
-                                <li>"<span class="bold">General &gt; Editors &gt; File Associations</span>" 로 이동</li>
-                                <li>파일연결 창에서 오른쪽 상단의 "<span class="bold">add...</span>" 버튼을 클릭</li>
-                                <li>File Type 에 "<span class="bold">*.scss</span>"를 입력한 다음 ok 버튼을 클릭</li>
-                                <li>*.scss 목록에서 File Associations 항목을 찿아서 선택</li>
-                                <li>*.scss를 선택한 후 하단창 Associated editors에서 "<span class="bold">Add</span>"버튼을 클릭</li>
-                                <li>상단에 internal editors 가 선택되어 있는지 확인한 다음 "<span class="bold">CSS Editor</span>"를 찿아서 선택한 다음 ok 버튼 클릭</li>
-                            </ol>
-                        </td>
-                    </tr>
-                </tbody>
-            </table>
-            <h4>.scss 파일 형식을 기본 CSS 편집기에 추가 (Eclipse)</h4>
-            <table class="default-table">
-                <caption class="sr-only">.scss 파일 형식을 기본 css 편집기에 추가</caption>
-                <colgroup>
-                    <col style="width: 25%" />
-                    <col style="width: 75%" />
-                </colgroup>
-                <tbody>
-                    <tr>
-                        <th scope="row">.scss 파일 형식을 기본 css 편집기에 추가
-                        </th>
-                        <td>
-                            <ol type="1">
-                                <li>"<span class="bold">window &gt; preferences</span>"로 이동<</li>
-                                <li>"<span class="bold">General &gt; Content Types</span>" 메뉴 클릭</li>
-                                <li>Content types 에서 "<span class="bold">Text</span>" 를 펼친 후 css룰 선택</li>
-                                <li>css를 선택한 후 하단 "<span class="bold">File associations</span>"창에서 Add 버튼을 클릭</li>
-                                <li>Content type에 "<span class="bold">*.scss</span>"를 입력한 다음 ok를 클릭</li>
-                                <li>ok를 클릭하고 환경설정 창을 닫음</li>
-                            </ol>
-                        </td>
-                    </tr>
-                </tbody>
-            </table>
+            <article>
+                <h4>css 편집기와 연결</h4>
+                <table class="default-table">
+                    <caption class="sr-only">scss 파일 유형을 기본 Eclipse css 편집기와 연결</caption>
+                    <colgroup>
+                        <col style="width: 25%" />
+                        <col style="width: 75%" />
+                    </colgroup>
+                    <tbody>
+                        <tr>
+                            <th scope="row">Eclipse CSS 편집기와 연결</th>
+                            <td>
+                                <ol type="1">
+                                    <li>"<span class="bold">window &gt; preferences</span>"로 이동</li>
+                                    <li>"<span class="bold">General &gt; Editors &gt; File Associations</span>" 로 이동</li>
+                                    <li>파일연결 창에서 오른쪽 상단의 "<span class="bold">add...</span>" 버튼을 클릭</li>
+                                    <li>File Type 에 "<span class="bold">*.scss</span>"를 입력한 다음 ok 버튼을 클릭</li>
+                                    <li>*.scss 목록에서 File Associations 항목을 찿아서 선택</li>
+                                    <li>*.scss를 선택한 후 하단창 Associated editors에서 "<span class="bold">Add</span>"버튼을 클릭</li>
+                                    <li>상단에 internal editors 가 선택되어 있는지 확인한 다음 "<span class="bold">CSS Editor</span>"를 찿아서 선택한 다음 ok 버튼 클릭</li>
+                                </ol>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+            </article>
+            <article>
+                <h4>.scss 파일 형식을 기본 CSS 편집기에 추가 (Eclipse)</h4>
+                <table class="default-table">
+                    <caption class="sr-only">.scss 파일 형식을 기본 css 편집기에 추가</caption>
+                    <colgroup>
+                        <col style="width: 25%" />
+                        <col style="width: 75%" />
+                    </colgroup>
+                    <tbody>
+                        <tr>
+                            <th scope="row">.scss 파일 형식을 기본 css 편집기에 추가
+                            </th>
+                            <td>
+                                <ol type="1">
+                                    <li>"<span class="bold">window &gt; preferences</span>"로 이동<</li>
+                                    <li>"<span class="bold">General &gt; Content Types</span>" 메뉴 클릭</li>
+                                    <li>Content types 에서 "<span class="bold">Text</span>" 를 펼친 후 css룰 선택</li>
+                                    <li>css를 선택한 후 하단 "<span class="bold">File associations</span>"창에서 Add 버튼을 클릭</li>
+                                    <li>Content type에 "<span class="bold">*.scss</span>"를 입력한 다음 ok를 클릭</li>
+                                    <li>ok를 클릭하고 환경설정 창을 닫음</li>
+                                </ol>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+            </article>
         </section>
         <section id="">
             <h3>SASS 기타셋팅</h3>
-            <h4>구글 개발자도구 연결</h4>
-            <table class="default-table">
-                <caption class="sr-only">구글 개발자도구 연결</caption>
-                <colgroup>
-                    <col style="width: 25%" />
-                    <col style="width: 75%" />
-                </colgroup>
-                <tbody>
-                    <tr>
-                        <th>설명</th>
-                        <td>
-                            <figure>
-                               <img src="../../assets/images/sub/sass/img-sass-04.png" alt="구글 개발자도구 셋팅">
-                               <figcaption>개발자 도구에서 "<span class="bold">F1</span>" 클릭 후 해당 부분 체크</figcaption> 
-                            </figure>
-                        </td>
-                    </tr>
-                </tbody>
-            </table>
+            <article>
+                <h4>구글 개발자도구 연결</h4>
+                <table class="default-table">
+                    <caption class="sr-only">구글 개발자도구 연결</caption>
+                    <colgroup>
+                        <col style="width: 25%" />
+                        <col style="width: 75%" />
+                    </colgroup>
+                    <tbody>
+                        <tr>
+                            <th>설명</th>
+                            <td>
+                                <figure>
+                                <img src="../../assets/images/sub/sass/img-sass-04.png" alt="구글 개발자도구 셋팅">
+                                <figcaption>개발자 도구에서 "<span class="bold">F1</span>" 클릭 후 해당 부분 체크</figcaption> 
+                                </figure>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+            </article>
         </section>
         <section id="">
             <h3>SASS 구조</h3>
-            <h4>SASS 트리구조</h4>
-            <table class="default-table">
-                <caption class="sr-only">sass 기본구조 설명</caption>
-                <colgroup>
-                    <col style="width: 25%" />
-                    <col style="width: 75%" />
-                </colgroup>
-                <tbody>
-                    <tr>
-                        <th>sass 트리구조</th>
-                        <td>
-                            <figure>
-                               <img src="../../assets/images/sub/sass/img-sass-01.png" alt="sass 설명">
-                               <figcaption>트리구조 접었을 때</figcaption> 
-                            </figure>
-                            <figure>
-                                <img src="../../assets/images/sub/sass/img-sass-02.png" alt="sass 설명">
-                                <figcaption>트리구조 펼쳐졌을때</figcaption> 
-                             </figure>
-                        </td>
-                    </tr>
-                    <tr>
-                        <th>설명</th>
-                        <td>
-                            <ul>
-                                <li>sass 구조는 부모요소와 자식요소로 나뉜다. (가칭)</li>
-                                <li>자식요소는 역할별로 폴더로 구분지어 생성</li>
-                            </ul>
-                        </td>
-                    </tr>
-                </tbody>
-            </table>
-            <h4>SASS 요소별 역할</h4>
-            <table class="default-table">
-                <caption class="sr-only">sass 기본구조 설명</caption>
-                <colgroup>
-                    <col style="width: 25%" />
-                    <col style="width: 75%" />
-                </colgroup>
-                <tbody>
-                    <tr>
-                        <th>부모요소</th>
-                        <td>
-                            <figure>
-                               <img src="../../assets/images/sub/sass/img-sass-03.png" alt="sass 설명">
-                               <figcaption>부모요소</figcaption> 
-                            </figure>
-                        </td>
-                    </tr>
-                    <tr>
-                        <th>설명</th>
-                        <td>
-                            <ul>
-                                <li>부모요소는 자식요소들을 임포트하여 컴파일 역활만 진행</li>
-                                <li>자식요소는 실제로 css 에 반영할 코드 작성</li>
-                            </ul>
-                        </td>
-                    </tr>
-                </tbody>
-            </table>
+            <article>
+                <h4>SASS 트리구조</h4>
+                <table class="default-table">
+                    <caption class="sr-only">sass 기본구조 설명</caption>
+                    <colgroup>
+                        <col style="width: 25%" />
+                        <col style="width: 75%" />
+                    </colgroup>
+                    <tbody>
+                        <tr>
+                            <th>sass 트리구조</th>
+                            <td>
+                                <figure>
+                                <img src="../../assets/images/sub/sass/img-sass-01.png" alt="sass 설명">
+                                <figcaption>트리구조 접었을 때</figcaption> 
+                                </figure>
+                                <figure>
+                                    <img src="../../assets/images/sub/sass/img-sass-02.png" alt="sass 설명">
+                                    <figcaption>트리구조 펼쳐졌을때</figcaption> 
+                                </figure>
+                            </td>
+                        </tr>
+                        <tr>
+                            <th>설명</th>
+                            <td>
+                                <ul>
+                                    <li>sass 구조는 부모요소와 자식요소로 나뉜다. (가칭)</li>
+                                    <li>자식요소는 역할별로 폴더로 구분지어 생성</li>
+                                </ul>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+            </article>
+            <article>
+                <h4>SASS 요소별 역할</h4>
+                <table class="default-table">
+                    <caption class="sr-only">sass 기본구조 설명</caption>
+                    <colgroup>
+                        <col style="width: 25%" />
+                        <col style="width: 75%" />
+                    </colgroup>
+                    <tbody>
+                        <tr>
+                            <th>부모요소</th>
+                            <td>
+                                <figure>
+                                <img src="../../assets/images/sub/sass/img-sass-03.png" alt="sass 설명">
+                                <figcaption>부모요소</figcaption> 
+                                </figure>
+                            </td>
+                        </tr>
+                        <tr>
+                            <th>설명</th>
+                            <td>
+                                <ul>
+                                    <li>부모요소는 자식요소들을 임포트하여 컴파일 역활만 진행</li>
+                                    <li>자식요소는 실제로 css 에 반영할 코드 작성</li>
+                                </ul>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+            </article>
         </section>
         <section id="">
             <h3>For문</h3>
-            <h4>방법</h4>
-            <article class="explanation-box">
-                <ul>
-                    <li>@for $i from 1 through 9</li>
-                    <li>#{$i}</li>
-                </ul>
+            <article>
+                <h4>방법</h4>
+                <div class="explanation-box">
+                    <ul>
+                        <li>@for $i from 1 through 9</li>
+                        <li>#{$i}</li>
+                    </ul>
+                </div>
             </article>
-            <h4>활용 예시</h4>
-            <table class="default-table">
-                <caption class="sr-only">for문 얘사</caption>
-                <colgroup>
-                    <col style="width: 25%" />
-                    <col style="width: 75%" />
-                </colgroup>
-                <tbody>
-                    <tr>
-                        <th>예시</th>
-                        <td>
-                            <pre>
-                                for $i from 1 through 20 {
-                                    &.realtime-#{$i}{
-                                        @if ($i &lt; 10){
-                                            @include imagePush("temp","0#{$i}");
-                                        }
-                                        
-                                        @else {
-                                            @include imagePush("temp","#{$i}");
+            <article>
+                <h4>활용 예시</h4>
+                <table class="default-table">
+                    <caption class="sr-only">for문 얘사</caption>
+                    <colgroup>
+                        <col style="width: 25%" />
+                        <col style="width: 75%" />
+                    </colgroup>
+                    <tbody>
+                        <tr>
+                            <th>예시</th>
+                            <td>
+                                <pre>
+                                    for $i from 1 through 20 {
+                                        &.realtime-#{$i}{
+                                            @if ($i &lt; 10){
+                                                @include imagePush("temp","0#{$i}");
+                                            }
+                                            
+                                            @else {
+                                                @include imagePush("temp","#{$i}");
+                                            }
                                         }
                                     }
-                                }
-                            </pre>
-                        </td>
-                    </tr>
-                </tbody>
-            </table>
+                                </pre>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+            </article>
         </section>
     </main>
 
