--- a/guideLine/html/sub/svelte.html
+++ b/guideLine/html/sub/svelte.html
@@ -38,7 +38,7 @@
             <h2>Svelte</h2>
             <p class="notice">Vue.js로 인한 현재 교육 보류</p>
             <h3>Svelte 특징</h3>
-            <article class="explanation-box">
+            <div class="explanation-box">
                 <ol>
                     <li>
                         <p>Diffing 이나  Overhead 가 일어나지 않아 처리속도 가 빠르다.</p>
@@ -49,17 +49,17 @@
                     </li>
                     <li>애플리케이션 상태의 변화가 DOM에 자동으로 반영 (반응성)</li>
                 </ol>
-            </article>
+            </div>
         </section>
         <section id="disadvantages">
             <h3>Svelte 단점</h3>
-            <article class="explanation-box">
+            <div class="explanation-box">
                 <ul>
                     <li>작은 생태계 (2019년 4월 3릴리즈)</li>
                     <li>runtime으로 동작하지 않기 때문에 CDN 미제공</li>
                     <li>IE 미지원</li>
                 </ul>
-            </article>
+            </div>
         <section id="command">
             <h3>Svelte 명령어</h3>
             <table class="default-table">
