--- a/guideLine/html/sub/vue.html
+++ b/guideLine/html/sub/vue.html
@@ -228,7 +228,6 @@
                         &lt;app-contents>&lt;/app-contents&gt;
                     &lt;/div&gt;
                     &lt;script&gt;
-                        <code class="red">
                         Vue.component('app-header', {
                             template: '&lt;h1&gt;Header&lt;/h1&gt;'
                         });
@@ -236,7 +235,6 @@
                         Vue.component('app-contents', {
                             template: '&lt;div&gt;Content&lt;/div&gt;'
                         });
-                        </code>
                         new Vue({
                             el : "#app"
                         });
@@ -250,13 +248,11 @@
                     &lt;script&gt;
                         new Vue({
                             el : "#app",
-                            <code class="red">
                             components:{
                                 'app-footer':{
                                     template: '&lt;footer&gt;Footer&lt;/footer&gt;'
                                 }
                             }
-                            </code>
                         });
                     &lt;/script&gt;
                 </pre>
@@ -279,14 +275,12 @@
                 <h4>Props 활용</h4>
                 <pre>
                     &lt;div id="app-props"&gt;
-                        <code class="red">
                         &lt; app-header v-bind:approps='message'&gt; &lt;/app-header&gt;
-                        </code>
                     &lt;/div &gt;
                     &lt;script&gt;
                         let appHeader = {
                             template: "&lt;h1&gt;{{ approps }}&lt;/h1&gt;",
-                            <code class="red">props : ['approps']</code>
+                            props : ['approps']
                         }
     
                         new Vue ({
@@ -800,7 +794,7 @@
                         &lt;/div&gt;
                         &lt;div&gt;
                             &lt;label for="password"&gt;PW : &lt;/label&gt;
-                            &lt;input type="password" id="password" <span class="red">v-model="password"</span></span>&gt;
+                            &lt;input type="password" id="password" <span class="red"></span>v-model="password"</span></span>&gt;
                         &lt;/div&gt;
                             &lt;button type="submit"&gt;Login&lt;/button&gt;  
                     &lt;/form&gt;
